--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/Circles.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Evogym</title>
+    <title>Magical Kenya</title>
   </head>
   <body>
     <div id="root"></div>
